fixing marker issue on mobile and pressing calculate twice when on 100%

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,6 @@ input {
   position: absolute;
   left:0;
   margin-top: 30px;
-  margin-left: -5px;
 }
 
 .meter-container {
